UI template for the UI

--- a/src/app/result/result.html
+++ b/src/app/result/result.html
@@ -100,10 +100,11 @@
         </tr>
 
         <!-- <tr class="gap-row"><td colspan="8"></td></tr> -->
-     <tr class="element-header faded">
+     <!-- <tr class="element-header faded"> -->
+      <tr class="section-start element-row">
         <tr>
-          <td>Element</td>
-          <td>Ni</td><td>-</td><td>-</td><td>-</td><td>-</td><td>-</td><td>-</td>
+          <th>Element</th>
+          <th>Ni</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th>
         </tr>
         <tr>
           <td>Result %</td>
