--- a/src/app/result/result.html
+++ b/src/app/result/result.html
@@ -1,8 +1,6 @@
-<div class="wrapper">
-
+<div class="wrapper" *ngIf="rawData.length > 0">
   <!-- HEADER -->
   <div class="header">
-
     <div class="header-section">
       <div class="logo">
         <div class="logo-icon">🔥</div>
@@ -14,125 +12,111 @@
       <div class="header-line"></div>
     </div>
 
-   <div class="header-section center">
-  FURNACE-{{ rawData[0]?.spectrumResults[0]?.furnaceNo }}
-</div>
+    <div class="header-section center">
+      FURNACE-{{ rawData[0]?.spectrumResults[0]?.furnaceNo }}
+    </div>
 
-<div class="header-section right">
-  <div class="header-line"></div>
-  Heat No :
-  <b>{{ rawData[0]?.spectrumResults[0]?.heatNo }}</b>
-</div>
-
-
+    <div class="header-section right">
+      <div class="header-line"></div>
+      Heat No :
+      <b>{{ rawData[0]?.spectrumResults[0]?.heatNo }}</b>
+    </div>
   </div>
 
   <!-- INFO CARD -->
   <div class="card">
-
-<div class="card-top">
-  <div>
-    Result received at :
-    <b>{{ rawData[0]?.spectrumResults[0]?.createdAt | date:'MMM dd, yyyy hh:mm a' }}</b>
-  </div>
-  <div>
-    Method :
-    <b>{{ rawData[0]?.spectrumResults[0]?.Grade }}</b>
-  </div>
-</div>
-
+    <div class="card-top">
+      <div>
+        Result received at :
+        <b>{{
+          rawData[0]?.spectrumResults[0]?.createdAt
+            | date : "MMM dd, yyyy hh:mm a"
+        }}</b>
+      </div>
+      <div>
+        Method :
+        <b>{{ rawData[0]?.spectrumResults[0]?.Grade }}</b>
+      </div>
+    </div>
 
     <div class="divider"></div>
-<div class="info-grid">
+    <div class="info-grid">
+      <div class="info-item">
+        <label>Customer Name</label><br />
+        <span>{{ rawData[0]?.customerName }}</span>
+      </div>
 
-  <div class="info-item">
-    <label>Customer Name</label><br>
-    <span>{{ rawData[0]?.customerName }}</span>
+      <div class="info-item">
+        <label>Part Name</label><br />
+        <span>{{ rawData[0]?.productName }}</span>
+      </div>
+
+      <div class="info-item">
+        <label>Stage</label><br />
+        <span>{{ rawData[0]?.spectrumResults[0]?.stage }}</span>
+      </div>
+
+      <div class="info-item">
+        <label>Checked By</label><br />
+        <span>{{ rawData[0]?.spectrumResults[0]?.testedBy }}</span>
+      </div>
+
+      <div class="info-item">
+        <label>Grade</label><br />
+        <span>{{ rawData[0]?.spectrumResults[0]?.Grade }}</span>
+      </div>
+    </div>
   </div>
 
-  <div class="info-item">
-    <label>Part Name</label><br>
-    <span>{{ rawData[0]?.productName }}</span>
-  </div>
-
-  <div class="info-item">
-    <label>Stage</label><br>
-    <span>{{ rawData[0]?.spectrumResults[0]?.stage }}</span>
-  </div>
-
-  <div class="info-item">
-    <label>Checked By</label><br>
-    <span>{{ rawData[0]?.spectrumResults[0]?.testedBy }}</span>
-  </div>
-
-  <div class="info-item">
-    <label>Grade</label><br>
-    <span>{{ rawData[0]?.spectrumResults[0]?.Grade }}</span>
-  </div>
-
-</div>
-
-
-  </div>
-
-  <!-- TABLE -->
   <div class="table-card">
-
     <div class="table-title">Spectro Lab Results</div>
 
     <table>
-      <thead>
-        <tr>
-          <th>Element</th>
-         <th *ngFor="let el of rawData[0]?.spectrumResults[0]?.result">
-      {{ el.abbr }}
-    </th>
-        </tr>
-      </thead>
-
       <tbody>
-        <tr>
-          <td>Result %</td>
- <td *ngFor="let el of rawData[0]?.spectrumResults[0]?.result">
-    {{ el.labResult }}
-  </td>        </tr>
-        <tr>
-          <td>Required</td>
- <td *ngFor="let el of rawData[0]?.spectrumResults[0]?.result">
-    {{ el.weightToBeAdded }} Kg
-  </td>        </tr>
-        <tr>
-          <td>Actual Kg</td>
-           <td
-    *ngFor="let el of rawData[0]?.spectrumResults[0]?.result"
-    class="danger"
-  >
-    {{ el.weightToBeAdded }} Kg
-  </td>
-        </tr>
+        <ng-container
+          *ngFor="
+            let group of chunkArray(rawData[0]?.spectrumResults[0]?.result, 7);
+            let i = index
+          "
+        >
+          <!-- GAP BETWEEN SECTIONS -->
+          <tr *ngIf="i > 0" class="gap-row">
+            <td colspan="8"></td>
+          </tr>
 
-        <!-- <tr class="gap-row"><td colspan="8"></td></tr> -->
-     <!-- <tr class="element-header faded"> -->
-      <!-- <tr class="section-start element-row">
-        <tr>
-          <th>Element</th>
-          <th>Ni</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th>
-        </tr>
-        <tr>
-          <td>Result %</td>
-          <td>5%</td><td>-</td><td>-</td><td>-</td><td>-</td><td>-</td><td>-</td>
-        </tr>
-        <tr>
-          <td>Required</td>
-          <td>456 Kg</td><td>-</td><td>-</td><td>-</td><td>-</td><td>-</td><td>-</td>
-        </tr>
-        <tr>
-          <td>Actual Kg</td>
-          <td class="danger">56 Kg</td><td>-</td><td>-</td><td>-</td><td>-</td><td>-</td><td>-</td>
-        </tr> -->
-    </tbody>
+          <!-- ELEMENT HEADER -->
+          <tr>
+            <th>Element</th>
+            <th *ngFor="let el of group">
+              {{ el.isPlaceholder ? "-" : el.abbr }}
+            </th>
+          </tr>
+
+          <!-- RESULT -->
+          <tr>
+            <td>Result %</td>
+            <td *ngFor="let el of group">
+              {{ el.isPlaceholder ? "-" : el.labResult }}
+            </td>
+          </tr>
+
+          <!-- REQUIRED -->
+          <tr>
+            <td>Required</td>
+            <td *ngFor="let el of group">
+              {{ el.isPlaceholder ? "-" : el.weightToBeAdded + " Kg" }}
+            </td>
+          </tr>
+
+          <!-- ACTUAL -->
+          <tr>
+            <td>Actual Kg</td>
+            <td *ngFor="let el of group" class="danger">
+              {{ el.isPlaceholder ? "-" : el.weightToBeAdded + " Kg" }}
+            </td>
+          </tr>
+        </ng-container>
+      </tbody>
     </table>
-
   </div>
-
 </div>
