--- a/src/app/bunker/bunker.html
+++ b/src/app/bunker/bunker.html
@@ -5,7 +5,7 @@
     <div class="logo">
      <img src="assets/bin1.png" alt="ACCEEDO MeltPro Logo" class="logo-img">
     </div>
-    <div class="date"  id="currentDate"></div>
+    <div class="date"  > Date : {{date | date:'dd-MM-yyyy'}}</div>
   </div>
 
   <!-- BIN LIVE -->
