--- a/src/app/result/result.html
+++ b/src/app/result/result.html
@@ -3,10 +3,10 @@
   <div class="header">
     <div class="header-section">
       <div class="logo">
-        <div class="logo-icon">🔥</div>
         <div class="logo-text">
-          <div class="title">ACCEEDO</div>
-          <div class="sub">MeltPro</div>
+          <!-- <div class="title">ACCEEDO</div>
+          <div class="sub">MeltPro</div> -->
+          <img src="assets/logo.png" alt="Acceedo Logo" />
         </div>
       </div>
       <div class="header-line"></div>
@@ -76,7 +76,7 @@
       <tbody>
         <ng-container
           *ngFor="
-            let group of chunkArray(result.spectrumResults[0]?.result, 7);
+            let group of chunkArray(result.spectrumResults[0]?.result, 8);
             let i = index
           "
         >
