--- a/src/app/result/result.scss
+++ b/src/app/result/result.scss
@@ -7,6 +7,15 @@
 
 body {
   background: #1D2637;
+   transform: scale(0.95);
+  transform-origin: top center;
+  overflow: hidden;
+}
+
+html, body {
+  width: 1920px;
+  height: 1080px;
+  overflow: hidden;
 }
 
 
@@ -20,7 +29,6 @@ body {
   display:flex;
   align-items:center;
   justify-content:space-between;
-  padding:15px 20px;
 }
 
 .header-section{
@@ -36,17 +44,20 @@ body {
 
 .header-section.right{
   color: white;
+  justify-content: center;
+    font-size: 26px;
+    font-weight: 700;
 }
 
 .header-section.center{
   justify-content:center;
-  font-size:26px;
+  font-size:30px;
   font-weight:700;
 }
 
 .header-section.right{
   justify-content:flex-end;
-  font-size:18px;
+  font-size:30px;
 }
 
 .header-line{
@@ -81,7 +92,7 @@ body {
   background:#334155;
   border-radius:12px;
   margin-top:20px;
-  padding:18px;
+  padding:14px;
 }
 
 .card-top{
@@ -162,16 +173,8 @@ body {
 .table-card {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 300px); /* adjust if needed */
 }
 
-table {
-  flex: 1;
-}
-
-tbody {
-  height: 100%;
-}
 
 .table-title{
   padding:14px 18px;
@@ -189,14 +192,14 @@ table{
 
 th{
   background:#3b4a63;
-  padding:12px;
+  padding:10px;
   border-bottom:1px solid #475569;
 }
 
 td{
-  padding:12px;
+  padding:10px;
   border-bottom:1px solid #475569;
-   font-size:18px;
+   font-size:20px;
 }
 
 th:first-child,
