--- a/src/app/result/result.scss
+++ b/src/app/result/result.scss
@@ -51,13 +51,13 @@ html, body {
 
 .header-section.center{
   justify-content:center;
-  font-size:30px;
+  font-size:40px;
   font-weight:700;
 }
 
 .header-section.right{
   justify-content:flex-end;
-  font-size:30px;
+  font-size:35px;
 }
 
 .header-line{
@@ -194,12 +194,14 @@ th{
   background:#3b4a63;
   padding:10px;
   border-bottom:1px solid #475569;
+    font-size:30px;
 }
 
 td{
   padding:10px;
   border-bottom:1px solid #475569;
    font-size:20px;
+   border-left: 0.2px solid #475569;
 }
 
 th:first-child,
@@ -220,18 +222,152 @@ td:first-child{
   height:12px;
 }
 
-/* RESULT STATUS COLORS */
 td.low {
-  color: #facc15; /* yellow */
+  color: #facc15; 
   font-weight: 700;
 }
 
 td.high {
-  color: #ef4444; /* red */
+  color: #ef4444; 
   font-weight: 700;
 }
 
 td.normal {
-  color: #22c55e; /* green */
+  color: #22c55e; 
   font-weight: 700;
+}
+
+
+
+
+/* FULL TV SCREEN */
+.tv-container {
+    width: 1920px;
+    height: 1080px;
+    padding: 40px 60px;
+}
+
+/* HEADER */
+.header {
+    background: #334155;
+    border-radius: 12px;
+    padding: 25px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo-box img {
+    height: 70px;
+}
+
+.title {
+    font-size: 40px;
+    font-weight: 600;
+    color: #ffffff;
+}
+
+/* FURNACE CARD */
+.furnace-card {
+    margin-top: 35px;
+    background: #334155;
+    border-radius: 16px;
+    padding: 25px;
+}
+
+/* FURNACE TITLE */
+.furnace-title {
+    background: #475569;
+    padding: 15px 25px;
+    font-size: 28px;
+    font-weight: 600;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    color: #ffffff;
+}
+
+/* STAGE ROW */
+.stage-row {
+    display: flex;
+    align-items: center;
+    background: #556274;
+    border-radius: 14px;
+    padding: 50px;
+}
+
+.stage-label {
+    font-size: 40px;
+    color: #ffffff;
+    width: 140px;
+}
+
+/* STAGE FLOW */
+.stage-flow {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+/* STAGE BOX */
+.stage {
+    min-width: 220px;
+    padding: 54px 120px;
+    text-align: center;
+    border-radius: 30px;
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 1.4;
+}
+
+.stage span {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+/* COLORS */
+.scheduled {
+    background: #3c809f;
+}
+
+.started {
+    background: #7fab8f;
+}
+
+.charge {
+    background: #96a79c;
+    position: relative;
+}
+
+/* TIMER */
+.timer {
+    position: absolute;
+    right: 21px;
+    top: 12px;
+    background: #d1fae5;
+    color: #065f46;
+    font-size: 14px;
+    padding: 9px 18px;
+    border-radius: 12px;
+}
+
+/* ARROW */
+.arrow {
+    font-size: 50px;
+    color: #ffffff;
+}
+
+
+.stage-time{
+    margin-top: 12px;
+    font-size: 20px;
+    color: #000000;
+    border: 1px solid #a1a1a1;
+    background-color: #cbc9c9;
+    padding: 5px 10px;
+    border-radius: 8px;
+
+    /* shadow */
+    box-shadow: 
+      0 8px 6px rgba(0, 0, 0, 0.25),
+      inset 0 1px 0 rgba(255, 255, 255, 0.35);
 }
