--- a/src/app/result/result.scss
+++ b/src/app/result/result.scss
@@ -247,135 +247,136 @@ td.normal {
 
 
 
-
-/* FULL TV SCREEN */
-.tv-container {
-    width: 1920px;
-    height: 1080px;
-    padding: 40px 60px;
-}
-
-/* HEADER */
 .header {
-    background: #334155;
-    border-radius: 12px;
-    padding: 25px 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  background: #2f3e52;
+  border-radius: 8px;
+  padding: 20px 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
 }
 
-.logo-box img {
-    height: 70px;
+.logo {
+  padding: 7px 18px;
+  border-radius: 4px;
+  color: #333;
 }
 
-.title {
-    font-size: 40px;
-    font-weight: 600;
-    color: #ffffff;
+.logo-title {
+  font-weight: 700;
+  font-size: 20px;
 }
 
-/* FURNACE CARD */
-.furnace-card {
-    margin-top: 35px;
-    background: #334155;
-    border-radius: 16px;
-    padding: 25px;
+.logo-sub {
+  font-size: 12px;
+  letter-spacing: 1px;
 }
 
-/* FURNACE TITLE */
-.furnace-title {
-    background: #475569;
-    padding: 15px 25px;
-    font-size: 28px;
-    font-weight: 600;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    color: #ffffff;
+.header-title {
+  font-size: 40px;
+  font-weight: 600;
+  color: white;
+}
+
+/* CARD */
+.card {
+  background: #344559;
+  border-radius: 10px;
+  margin-top: 20px;
+  padding: 16px 20px 22px;
+  margin: 20px;
+}
+
+.card-title {
+  background: #3f5068;
+  padding: 30px 14px;
+  border-radius: 6px;
+  font-size: 35px;
+  font-weight: 600;
+  color: #ffffff;
 }
 
 /* STAGE ROW */
 .stage-row {
-    display: flex;
-    align-items: center;
-    background: #556274;
-    border-radius: 14px;
-    padding: 50px;
+  display: flex;
+  margin-top: 20px;
+  align-items: center;
 }
 
 .stage-label {
-    font-size: 40px;
-    color: #ffffff;
-    width: 140px;
+  width: 80px;
+  color: #5bb1ff;
+  font-size: 40px;
 }
 
-/* STAGE FLOW */
-.stage-flow {
-    display: flex;
-    align-items: center;
-    gap: 30px;
+/* TIMELINE */
+.timeline {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  padding: 20px;
 }
 
-/* STAGE BOX */
-.stage {
-    min-width: 220px;
-    padding: 54px 120px;
-    text-align: center;
-    border-radius: 30px;
-    font-size: 30px;
-    font-weight: 600;
-    line-height: 1.4;
+.step {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+  min-width: 120px;
 }
 
-.stage span {
-    font-size: 18px;
-    font-weight: 400;
+.icon {
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 45px;
+  margin-bottom: 8px;
 }
 
-/* COLORS */
-.scheduled {
-    background: #3c809f;
-}
-
-.started {
-    background: #7fab8f;
-}
-
-.charge {
-    background: #96a79c;
-    position: relative;
-}
-
-/* TIMER */
-.timer {
-    position: absolute;
-    right: 21px;
-    top: 12px;
-    background: #d1fae5;
-    color: #065f46;
-    font-size: 14px;
-    padding: 9px 18px;
-    border-radius: 12px;
-}
-
-/* ARROW */
-.arrow {
-    font-size: 50px;
-    color: #ffffff;
+.icon img {
+  width: 45px;
+  height: 45px;
+  object-fit: contain;
 }
 
 
-.stage-time{
-    margin-top: 12px;
-    font-size: 20px;
-    color: #000000;
-    border: 1px solid #a1a1a1;
-    background-color: #cbc9c9;
-    padding: 5px 10px;
-    border-radius: 8px;
-
-    /* shadow */
-    box-shadow: 
-      0 8px 6px rgba(0, 0, 0, 0.25),
-      inset 0 1px 0 rgba(255, 255, 255, 0.35);
+.icon.green {
+  background: #00d100;
+  color: #000;
 }
+
+.icon.gray {
+  background: #bdbdbd;
+  color: #333;
+}
+
+.text {
+  text-align: center;
+  font-size: 30px;
+  color: #ffffff;
+}
+
+.text span {
+  font-size: 26px;
+  color: #e0e0e0;
+}
+
+/* CONNECTING LINE */
+.line {
+  flex: 1;
+  height: 3px;
+  background: #cfcfcf;
+  margin: 0 8px;
+}
+
+.line.green {
+  background: #00d100;
+}
+
+.scheduled .icon { background: #00d100; }
+.started .icon { background: #00d100; }
+.charge .icon { background: #bdbdbd; }
